[package]
name = "rust-axum-todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
chrono = "0.4.38"
async-trait = "0.1.88"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"